# Project-Prometheus

./: .env.example  .gitignore  CLA.md  CLAUDE.md  CONTRIBUTORS.md  LICENSE  README.md  cli.py  debug_test.py  launcher.py  pyproject.toml  quick_setup_test.py  requirements.txt  setup.py  setup.py.broken  start_cli.py  start_web.py  test_installation.py  web_app.py
core/: orchestrator.py
templates/: index.html
